# Lumi-Music-Studio

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  api.py  cli.py  config.py  debug_qr.py  downloader.py  lumi.sh  mpris.py  pyproject.toml  requirements.txt  start.sh  state.py  tui.py  unblock.py  visualizer.py  weapi.py
.github/workflows/: ci.yml
