[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lumi-music-studio"
version = "2.0.0"
description = "Lumi Music Studio — 网易云音乐终端播放器"
authors = [{name = "lumi"}]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "brotli>=1.0",
    "pygame>=2.5",
    "mutagen>=1.47",
    "pycryptodome>=3.20",
    "qrcode>=7.4",
]
optional-dependencies = {
    gst = ["PyGObject>=3.46"],
    mpris = ["dbus-python>=1.3"],
}

[project.scripts]
lumi = "tui:run"

[tool.setuptools.packages.find]
where = ["."]
